--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,7 @@
   padding: 0;
   margin: 0;
 }
-
-body {
-  background-color: #d9dcd6;
-}
-
+/* BEGIN HEADER STYLING */
 .header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -46,6 +42,12 @@ a {
   color: #ffffff;
   text-decoration: none;
 }
+/* END HEADER STYLING */
+
+/* BEGIN MAIN CONTENT STYLING */
+body {
+  background-color: #d9dcd6;
+}
 
 p {
   font-size: 16px;
@@ -65,7 +67,7 @@ p {
   display: inline-block;
   margin-left: 20px;
 }
-.search-engine-optimization {
+.firm-offerings {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -74,61 +76,25 @@ p {
   color: #ffffff;
 }
 
-.online-reputation-management {
+.firm-offerings h2 {
   margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
+  font-size: 36px;
 }
 
 .float-left {
+  max-height: 200px;
   float: left;
   margin-right: 25px;
 }
 
 .float-right {
+  max-height: 200px;
   float: right;
   margin-left: 25px;
 }
+/* END MAIN CONTENT STYLING */
 
-.search-engine-optimization img {
-  max-height: 200px;
-}
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
+/* BEGIN SIDEBAR STYLING */
 .benefits {
   margin-right: 20px;
   padding: 20px;
@@ -140,54 +106,24 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
+/* END SIDEBAR STYLING*/
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
+/* BEGIN FOOTER STYLING */
 .footer {
   padding: 30px;
   clear: both;
@@ -199,3 +135,4 @@ p {
 .footer h2 {
   font-size: 20px;
 }
+/* END FOOTER STYLING */
